# simple-cpu-MLP

./: CMakeLists.txt  Dockerfile  common.h  main.cpp  mlp.cpp  mlp.h
